--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,19 +5,17 @@ author: CACHET Team <cph.cachet@gmail.com>
 homepage: https://github.com/cph-cachet/openmhealth_schemas
 
 environment:
-  sdk: '>=2.3.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation: ^3.0.0
-  uuid: ^2.0.0
-  test: ^1.5.3
+  json_annotation: ^4.0.1
+  uuid: ^3.0.0
 
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  build_runner:
-  json_serializable: ^3.0.0
+  build_runner: ^2.0.0
+  json_serializable: ^4.1.1
+  test: ^1.17.2
 
